# py123d

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  jbwang_test.py  jbwang_test2.py  pyproject.toml  requirements.txt  setup.py  test_viser.py
.github/workflows/: deploy-docs.yaml  pre-commit.yaml  pypi.yaml  pytest.yaml
asim/common/geometry/: array_representations.py  base.py  base_enum.py  constants.py  occupancy_map.py  tranform_2d.py  units.py  utils.py  vector.py
asim/common/time/: time_point.py
asim/common/utils/: enums.py
asim/common/vehicle_state/: ego_state.py
asim/common/visualization/: color_lib.py
asim/dataset/: scene.py
asim/dataset/arrow/: __init__.py  conversion.py  helper.py  multiple_table.py
asim/dataset/dataset_specific/: dataset_creation.py  raw_data_processor.py
asim/dataset/logs/: log_metadata.py
asim/dataset/maps/: abstract_map.py  abstract_map_objects.py  default_map.py  map_datatypes.py
asim/dataset/observation/: abstract_observation.py  agent_datatypes.py  bounding_box.py  detection_observation.py  privileged_observation.py  traffic_light.py
asim/dataset/recording/: detection_recording.py
asim/dataset/scene/: abstract_scene.py  arrow_scene.py  scene_builder.py  scene_filter.py
asim/script/: run_create_submission_pickle.py  run_create_submission_pickle_warmup.py  run_dataset_caching.py  run_metric_caching.py  run_pdm_score_from_submission.py  run_pdm_score_one_stage.py  run_preprocessing.py  run_simulation.py  run_training.py
asim/script/builders/: data_processor_builder.py  scene_builder_builder.py  scene_filter_builder.py
asim/simulation/: simulation_2d.py  simulation_2d_setup.py
asim/simulation/agents/: abstract_agents.py  constant_velocity_agents.py  idm_agents.py  (+2 more)
d123/: __init__.py
d123/conversion/: abstract_dataset_converter.py  dataset_converter_config.py
d123/datasets/: raw_data_converter.py
d123/geometry/: __init__.py  base.py  bounding_box.py  geometry_index.py  occupancy_map.py  point.py  polyline.py  rotation.py  se.py  vector.py
d123/script/: run_conversion.py  run_dataset_caching.py  run_dataset_conversion.py  run_preprocessing.py  run_simulation.py  run_training.py  run_viser.py
d123/simulation/: simulation_2d.py  simulation_2d_setup.py
docs/: README.md  camera.md  conf.py  contributing.md  datasets.md  environment.md  geometry.rst  index.rst  installation.md  requirements.in  requirements.txt  schema.md  visualization.md
docs/_static/: custom.css
docs/datasets/: av2.rst  carla.rst  index.rst  kitti-360.rst  nuplan.rst  nuscenes.rst  pandaset.rst  template.rst  wod_motion.rst  wod_perception.rst  wodp.rst  wopd.rst
docs/development/: index.rst
docs/notes/: contributing.md  conventions.rst
examples/: 01_viser.py
notebooks/: 01_scene_tutorial.ipynb  Untitled-1.ipynb  Untitled-2.ipynb  arrow.ipynb  bev_matplotlib.ipynb  bev_render.ipynb  camera_matplotlib.ipynb  camera_render.ipynb  carla_data_collector.ipynb  collect_sim_metrics_gym.ipynb  demo_gym.ipynb  extraction_testing.ipynb  jbwang_viz_test.py  log_rendering.ipynb  merge_videos.ipynb  nuplan_map_dataframe.ipynb  nuplan_sensor_loading.ipynb  python_script.py  scene_rendering copy.ipynb  scene_rendering.ipynb  scene_sensor_loading.ipynb  scene_testing.ipynb  scene_testing_carla.ipynb  test.py  test_gym.ipynb  test_intesection_polygons.ipynb  test_map_api.ipynb  test_map_api_with_boxes.ipynb  test_nuplan_conversion.ipynb  test_nuplan_log_loading.ipynb  test_nuplan_log_v2 viz.ipynb  test_nuplan_log_v2.ipynb  test_nuplan_log_v3.ipynb  test_opendrive_conversion.ipynb  test_opendrive_elevation.ipynb  test_scene_builder.ipynb  test_simulation_2d.ipynb  test_waypoints.ipynb  viser_testing_v2.ipynb  viser_testing_v2_scene.ipynb  (+1 more)
notebooks/av2/: delete_me.ipynb  delete_me_map.ipynb
notebooks/carla/: vehicle_params.ipynb
notebooks/dataset/: dataset.ipynb  jbwang_test.py  parquet_testing.ipynb
notebooks/deprecated/: arrow.ipynb  collect_sim_metrics_gym.ipynb  extraction_testing.ipynb  nuplan_map_dataframe.ipynb  read_carla_map.ipynb  scene_rendering.ipynb  test_intesection_polygons.ipynb  test_map_api_with_boxes.ipynb  test_nuplan_log_loading.ipynb  test_nuplan_log_v2 viz.ipynb  test_nuplan_log_v2.ipynb  test_scene_builder.ipynb  test_waypoints.ipynb
notebooks/gym/: jbwang_test.py  test_gym.ipynb  test_simulation_2d.ipynb
notebooks/map_conversion/: test_nuplan_conversion.ipynb  test_opendrive_conversion.ipynb
notebooks/nuplan/: nuplan_sensor_loading.ipynb
notebooks/smarty/: smart_feature_testing.ipynb  smart_rollout.ipynb  smart_testing.ipynb  smart_tokens.ipynb
notebooks/tools/: merge_videos.ipynb  plot_map_sizes.ipynb
notebooks/viz/: 1nuscenes_layers_bounds.txt  arrow.ipynb  arrow1.ipynb  arrow2.ipynb  bev_matplotlib.ipynb  bev_matplotlib_prediction.ipynb  camera_matplotlib.ipynb  coordinate_check_results.txt  log_rendering.ipynb  nuscenes_layers_bounds.txt  video_example.ipynb  viser_testing_v2.ipynb  viser_testing_v2_map.ipynb  viser_testing_v2_scene.ipynb
notebooks/waymo_perception/: lidar_testing.ipynb  map_testing.ipynb  testing.ipynb
py123d/geometry/: point.py  polyline.py  rotation.py  se.py
py123d/script/: run_conversion.py  run_viser.py
scripts/conversion/: av2_sensor_conversion.sh  kitti360_conversion.sh  nuplan_mini_conversion.sh  nuscenes_conversion.sh  nuscenes_mini_conversion.sh  pandaset_conversion.sh  wopd_conversion.sh
scripts/dataset/: run_carla_log_caching.sh  run_log_caching.sh
scripts/download/: download_av2.sh  download_kitti_360.sh  download_lyft.sh  download_nuplan.sh  download_nuplan_logs.sh  download_nuplan_sensor.sh
scripts/install/: install_smart.sh
scripts/preprocessing/: preprocess_smart.sh
scripts/simulation/: run_sim_agents.sh
scripts/training/: train_smart.sh
scripts/viz/: run_viser.sh
tutorial/: 01_scene_tutorial.ipynb  02_map_tutorial.ipynb  03_visualization.ipynb
tutorials/: 01_scene_tutorial.ipynb  02_map_tutorial.ipynb  03_visualizations_tutorial.ipynb  04_geometry_tutorial.ipynb  05_async_conversion_test.ipynb  05_timestamps.ipynb
(+1202 files in other folders)
