[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
]
name = "d123"
version = "v0.0.7"
authors = [{ name = "Daniel Dauner", email = "daniel.dauner@gmail.com" }]
description = "TODO"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "bokeh",
    "geopandas",
    "joblib",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "Pillow",
    "psutil",
    "pyarrow",
    "pyogrio",
    "pyquaternion",
    "pytest",
    "rasterio",
    "ray",
    "rtree",
    "scipy",
    "setuptools",
    "shapely>=2.0.0",
    "tqdm",
    "notebook",
    "pre-commit",
    "hydra_colorlog",
    "hydra-core",
    "lxml",
    "trimesh",
    "viser",
]

[project.scripts]
d123-viser = "d123.script.run_viser:main"


[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pre-commit",
]
docs = [
    "Sphinx",
    "sphinx-rtd-theme",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-copybutton",
]
nuplan = [
    "nuplan-devkit @ git+https://github.com/motional/nuplan-devkit/@nuplan-devkit-v1.2",
    "ujson",
    "tornado",
    "sympy",
    "SQLAlchemy==1.4.27",
    "selenium",
    "nest_asyncio",
    "cachetools",
    "aioboto3",
    "aiofiles",
    "casadi",
    "control",
    "pyinstrument",
    "Fiona",
    "guppy3",
    "retry",
]
waymo = [
    "tensorflow==2.11.0",
    "waymo-open-dataset-tf-2-11-0",
    "intervaltree",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["d123*"]  # Only include d123 package
exclude = ["notebooks*", "docs*"]  # Explicitly exclude notebooks

[project.urls]
"Homepage" = "https://github.com/DanielDauner/d123"
"Bug Tracker" = "https://github.com/DanielDauner/d123/issues"
