[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[project]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
]
name = "py123d"
version = "v0.0.7"
authors = [{ name = "Daniel Dauner", email = "daniel.dauner@gmail.com" }]
description = "TODO"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "bokeh",
    "geopandas",
    "joblib",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "Pillow",
    "psutil",
    "pyarrow",
    "pyogrio",
    "pyquaternion",
    "pytest",
    "rasterio",
    "ray",
    "rtree",
    "scipy",
    "setuptools",
    "shapely>=2.0.0",
    "tqdm",
    "notebook",
    "pre-commit",
    "hydra_colorlog",
    "hydra-core",
    "lxml",
    "trimesh",
    "viser",
    "laspy[lazrs]",
    "DracoPy",
]

[project.scripts]
py123d-viser = "py123d.script.run_viser:main"
py123d-conversion = "py123d.script.run_conversion:main"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pre-commit",
]
docs = [
    "Sphinx",
    "sphinx-rtd-theme",
    "sphinx-autobuild",
    "sphinx-inline-tabs",
    "sphinx-copybutton",
    "myst-parser",
    "furo",
    "autoclasstoc",
]
nuplan = [
    "nuplan-devkit @ git+https://github.com/motional/nuplan-devkit/@nuplan-devkit-v1.2",
    "ujson",
    "tornado",
    "sympy",
    "SQLAlchemy==1.4.27",
    "selenium",
    "nest_asyncio",
    "cachetools",
    "aioboto3",
    "aiofiles",
    "casadi",
    "control",
    "pyinstrument",
    "Fiona",
    "guppy3",
    "retry",
]
nuscenes = [
    "lanelet2",
    "nuscenes-devkit==1.2.0",
]
nuscenes_expanded = [
    "nuscenes-devkit==1.2.0",
    "pycocotools==2.0.10",
    "laspy==2.6.1",
    "embreex==2.17.7.post6",
    "lanelet2==1.2.2",
    "protobuf==4.25.3",
    "pycollada==0.9.2",
    "vhacdx==0.0.8.post2",
    "yourdfpy==0.0.58",
]
waymo = [
    "protobuf==4.21.0",
    "tensorflow==2.13.0",
    "waymo-open-dataset-tf-2-12-0==1.6.6",
]
ffmpeg = [
    "imageio[ffmpeg]",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/DanielDauner/py123d"
"Bug Tracker" = "https://github.com/DanielDauner/py123d/issues"
